--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 en.wikibooks.org/wiki/Haskell の抄訳をベースに書いた Haskell の入門的な何か．
-by lesguillemets ( https.github.com/lesguillemets), 
+by lesguillemets ( https://github.com/lesguillemets/), 
 CC-BY-SA で配布．
